Fix the overlapping filter settings and the customize options (#8316)
* These changes fix the overlapping filter settings and the customize options dropdown on the `User Interface` page. The 2 buttons (save and delete) got an improvement alignment.

Further improvements:
- spacing between title and UI config name
- fix paddings on smaller screens
- whitespace between buttons and inputs

* Fix for a few cases where the layout was still wrong and too small. Every width now displays the buttons below the 2 inputs

* Remove commented style

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_admin_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_admin_default.less
@@ -515,6 +515,16 @@ ul.gn-resultview li.list-group-item {
         margin-bottom: 10px;
         border-color: #ccc;
       }
+      .col-lg-4, .col-md-6 {
+        @media (max-width: @screen-sm-max) {
+          padding-right: 0 !important;
+        }
+      }
+      .col-md-12, #gn-uiconfig-customize {
+        padding-right: 0 !important;
+        margin-bottom: @gn-spacing;
+      }
+
       // checkbox (Bootstrap 5.2)
       input[type="checkbox"],
       input[type="radio"] {
@@ -656,7 +666,16 @@ ul.gn-resultview li.list-group-item {
         z-index: 901;
       }
       #gn-uiconfig-customize {
-        margin-top: -85px;
+
+        @media (max-width: @screen-md-max) {
+          padding-left: 0 !important;
+        }
+
+        @media (min-width: @screen-lg-min) {
+          margin-top: -85px;
+        }
+
+
         .dropdown-menu {
           padding: 0 !important;
           li {
